LinKreta_POC_Repository/force-app/main/default/objects/SME_Master__c/SME_Master__c.object-meta.xml
<CustomObject>
    <label>SME Master</label>
    <nameField>
        <label>SME Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SME Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>