LinKreta_POC_Repository/force-app/main/default/objects/SME_Master__c/fields/SME_Leader__c.field-meta.xml
<CustomField>
    <fullName>SME_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SME_LEADER</description>
    <label>SME Leader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SME_Master</relationshipName>
    <type>Lookup</type>
</CustomField>