LinKreta_POC_Repository/force-app/main/default/objects/SME_Master__c/fields/SMEG_Master__c.field-meta.xml
<CustomField>
    <fullName>SMEG_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SMEG</label>
    <referenceTo>SMEG_Master__c</referenceTo>
    <relationshipLabel>SME Master</relationshipLabel>
    <relationshipName>SME_Master</relationshipName>
    <type>Lookup</type>
</CustomField>