LinKreta_POC_Repository/force-app/main/default/objects/SME_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>SMEG_Master__c</columns>
    <columns>NAME</columns>
    <columns>LOV_Id__c</columns>
    <columns>SME_Leader__c</columns>
    <columns>Is_Active__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LOV_Id__c</field>
        <operation>equals</operation>
        <value>SM004868</value>
    </filters>
    <label>All</label>
</ListView>